# psa-pbl

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  _download_bescom.py  _fetch_bescom.py  config.py  docker-compose.yml  git-auto.sh  pytest.ini
.github/workflows/: ci.yml
checkpoints/: gridsentinel_ieee14.pt  gridsentinel_ieee14_final.pt  gridsentinel_ieee14_full.pt
docs/: Metro_Grid_Digital_Twin.pptx  presentation_script.md
docs/paper/: ieee_paper.tex
paper/ieee/: paper.tex
platform/: DEPLOYMENT.md  Dockerfile  README.md  VERIFY.md  docker-compose.yml
platform/docs/: README.md
platform/dt-bescom/: demo_bescom.py  setup.py
platform/dt-contracts/: README.md  logging_config.py
platform/dt-contracts/python/: pyproject.toml
platform/dt-contracts/python/src/dt_contracts/: __init__.py  exceptions.py  models.py  schema_loader.py  units.py  utils.py  validate.py
platform/dt-contracts/python/src/dt_contracts/schemas/: __init__.py  actions.schema.json  explanations.schema.json  gridgraph.schema.json  telemetry.schema.json
platform/dt-dashboard/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
platform/dt-dataset-factory/: README.md  generate_ieee14_voltage_anomaly.py
scripts/: create_ppt.py  generate_diagrams.py  generate_images.py  research_plots.py  run_presentation.ps1  stop_servers.ps1
tests/: conftest.py  test_contracts.py  test_integration.py  test_ml_ensemble.py  test_scada.py  test_security.py
(+115 files in other folders)
